--- a/style.css
+++ b/style.css
@@ -89,4 +89,6 @@ div.questions p  {
 div.questions a.btn  {
   border-radius: 5px;
   color: #FFF;
+  background-color: #007bff;
+  border-color: #007bff;
 }
